--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^8.1.1"
   },
   "license": "MIT",
   "devDependencies": {
